WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38670
REGRESSION (
r58067
): Crash in WebView::paint when Web Inspector is docked and window is resized so small that WebView disappears
https://bugs.webkit.org/show_bug.cgi?id=38670
Summary
REGRESSION (r58067): Crash in WebView::paint when Web Inspector is docked and...
Adam Roben (:aroben)
Reported
2010-05-06 11:33:57 PDT
REGRESSION (
r58067
): Crash in WebView::paint when Web Inspector is docked and window is resized so small that WebView disappears
Attachments
Patch
(2.06 KB, patch)
2010-05-06 11:37 PDT
,
Adam Roben (:aroben)
sfalken
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-05-06 11:37:23 PDT
Created
attachment 55277
[details]
Patch
Adam Roben (:aroben)
Comment 2
2010-05-06 11:38:17 PDT
<
rdar://problem/7947105
>
Adam Roben (:aroben)
Comment 3
2010-05-06 11:52:28 PDT
Committed
r58900
: <
http://trac.webkit.org/changeset/58900
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug