third_party/WebKit/WebKit/win/WebView.cpp
@@ -946,8 +946,6 @@ void WebView::paint(HDC dc, LPARAM options)
         return;
     FrameView* frameView = coreFrame->view();
 
-    m_paintCount++;
-
     RECT rcPaint;
     HDC hdc;
     OwnPtr<HRGN> region;
@@ -971,6 +969,14 @@ void WebView::paint(HDC dc, LPARAM options)
         // children into the HDC.
         windowsToPaint = PaintWebViewAndChildren;
     }
+
+    if (::IsRectEmpty(&rcPaint)) {
+        if (!dc)
+            EndPaint(m_viewWindow, &ps);
+        return;
+    }
+
+    m_paintCount++;
 
     HDC bitmapDC = ::CreateCompatibleDC(hdc);
     bool backingStoreCompletelyDirty = ensureBackingStore();
